--- a/src/DAO/TicketingBundle/Resources/config/routing.yml
+++ b/src/DAO/TicketingBundle/Resources/config/routing.yml
@@ -1,3 +1,15 @@
-dao_ticketing_homepage:
-    path:     /ticket
+dao_ticketing_home:
+    path:     /home
     defaults: { _controller: DAOTicketingBundle:Ticket:index }
+
+dao_ticketing_date:
+    path:     /date
+    defaults: { _controller: DAOTicketingBundle:Ticket:registerDate }
+
+dao_ticketing_register:
+    path:     /register
+    defaults: { _controller: DAOTicketingBundle:Ticket:registerVisitor }
+
+dao_ticketing_summery:
+    path:     /summery
+    defaults: { _controller: DAOTicketingBundle:Ticket:registerSummery }
