--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,17 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "doctrine/doctrine-bundle": "^1.6",
+        "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.5",
-        "incenteev/composer-parameter-handler": "^2.0",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-cache-bundle": "^1.2",
+        "symfony/swiftmailer-bundle": "^2.3.10",
+        "symfony/monolog-bundle": "^3.1.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.3.*",
-        "twig/extensions": "~1.0",
+        "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/doctrine-fixtures-bundle": "~2.3",
-        "twig/twig": "^1.0||^2.0"
+        "stof/doctrine-extensions-bundle": "^1.2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -67,6 +66,6 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         },
-        "branch-alias": null
+        "branch-alias": "3.0-dev"
     }
 }
