ajout du code résa dans ticket et prix dans visitor

--- a/src/DAO/TicketingBundle/Resources/config/routing.yml
+++ b/src/DAO/TicketingBundle/Resources/config/routing.yml
@@ -12,5 +12,5 @@ dao_ticketing_register:
     
 
 dao_ticketing_summery:
-    path:     /summery
+    path:     /summery/{id}
     defaults: { _controller: DAOTicketingBundle:Ticket:registerSummery }
