ajout boucle affichage de tous les visiteurs ds récap

--- a/src/DAO/TicketingBundle/Resources/config/routing.yml
+++ b/src/DAO/TicketingBundle/Resources/config/routing.yml
@@ -7,7 +7,7 @@ dao_ticketing_date:
     defaults: { _controller: DAOTicketingBundle:Ticket:registerDate }
 
 dao_ticketing_register:
-    path:     /register/{id}/{nbTickets}
+    path:     /register/{id}/{nbTickets}/{current}
     defaults: { _controller: DAOTicketingBundle:Ticket:registerVisitor }
     
 
