refactorisation method du controller vers service et ajout des tests

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,6 +12,9 @@ services:
         autoconfigure: true
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
-        public: false
+        public: true
+
+    dao_ticketing.ticketservice:
+        class: DAO\TicketingBundle\Service\TicketService
 
     
