--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,9 +63,11 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    encryption: '%mailer_encryption%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
-    spool: { type: memory }
+    transport: "%mailer_transport%"
+    host:      "%mailer_host%"
+    username:  "%mailer_user%"
+    password:  "%mailer_password%"
+    encryption: tls
+    port:    587
+    spool:     { type: memory }
+    logging: true
