--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "stripe/stripe-php": "3.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
