--- a/parameters.yml
+++ b/parameters.yml
@@ -7,6 +7,7 @@ parameters:
     database_password: Chipiebebe8!
     mailer_transport: gmail
     mailer_host: smtp.gmail.com
-    mailer_user: anhdao.lelievre@gmail.com
-    mailer_password: chipiebebe8
+    mailer_user: "anhdao.lelievre@gmail.com"
+    mailer_password: "chipiebebe8"
+    mailer_auth_mode: login
     secret: 8fdcf7832d2da3f38151a7bf36de010782f38c4f
